--- a/ejemplo04factory/pom.xml
+++ b/ejemplo04factory/pom.xml
@@ -2,18 +2,13 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.curso.java.ejemplo03dao</groupId>
-	<artifactId>ejemplo03lanzador</artifactId>
+	<groupId>com.curso.java</groupId>
+	<artifactId>ejemplo04factory</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>com.curso.java.ejemplo03dao</groupId>
-			<artifactId>ejemplo03negocio</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.curso.java</groupId>
-			<artifactId>ejemplo04factory</artifactId>
+			<artifactId>ejemplo03dao</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
